--- a/mystyle.css
+++ b/mystyle.css
@@ -356,11 +356,19 @@ body{
   
  .carousel-control-next, .carousel-control-prev{
 
-    opacity: .2 !important;
-    height: 15% !important;
+    opacity: .9 !important;
+    width: 5% !important;
+    height: 10% !important;
     top: 25% !important;
+    border-radius : 200px ; 
  }
+ 
 
+.carousel-item-next, .carousel-item-prev, .carousel-item.active{ 
+    display: flex !important;
+    justify-content: space-evenly !important;
+}
+ 
 
 
 
@@ -470,7 +478,7 @@ body{
         
     }
 
-  
+
    
 }
 
